Added Update and insert record

--- a/ContactManager Java/bin/.gitignore
+++ b/ContactManager Java/bin/.gitignore
@@ -7,3 +7,6 @@
 /dbConn.class
 /PersonalContact$3.class
 /PersonalContact$4.class
+/PersonalContact$5.class
+/PersonalContact$6.class
+/PersonalContact$7.class
