Added Business Contact Form
added GUI for business form

added emtpy texfield prompt

--- a/ContactManager Java/bin/.gitignore
+++ b/ContactManager Java/bin/.gitignore
@@ -1,2 +1,10 @@
-/PersonalContact$8.class
-/PersonalContact$9.class
+/BusinessContact$1.class
+/BusinessContact.class
+/ContactManager$1.class
+/ContactManager$2.class
+/ContactManager.class
+/PersonalContact$1.class
+/PersonalContact$10.class
+/PersonalContact$2.class
+/PersonalContact$3.class
+/PersonalContact$4.class
