--- a/ContactManager Java/bin/.gitignore
+++ b/ContactManager Java/bin/.gitignore
@@ -1,10 +1,5 @@
+/BusinessContact$2.class
+/BusinessContact$3.class
 /BusinessContact$1.class
-/BusinessContact.class
-/ContactManager$1.class
-/ContactManager$2.class
-/ContactManager.class
-/PersonalContact$1.class
-/PersonalContact$10.class
-/PersonalContact$2.class
-/PersonalContact$3.class
-/PersonalContact$4.class
+/BusinessContact$4.class
+/BusinessContact$5.class
