--- a/ContactManager Java/bin/.gitignore
+++ b/ContactManager Java/bin/.gitignore
@@ -3,3 +3,6 @@
 /BusinessContact$1.class
 /BusinessContact$4.class
 /BusinessContact$5.class
+/BusinessContact$6.class
+/BusinessContact$7.class
+/BusinessContact$8.class
