Added Migration for personal and business

--- a/ContactManager Java/bin/.gitignore
+++ b/ContactManager Java/bin/.gitignore
@@ -7,3 +7,14 @@
 /BusinessContact$7.class
 /BusinessContact$8.class
 /BusinessContact$9.class
+/PersonalContact$1.class
+/PersonalContact$10.class
+/PersonalContact$2.class
+/PersonalContact$3.class
+/PersonalContact$4.class
+/PersonalContact$5.class
+/PersonalContact$6.class
+/PersonalContact$7.class
+/PersonalContact$8.class
+/PersonalContact$9.class
+/BusinessContact$10.class
